--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 div{
 	width: 300px;
-	background: lightblue;
+	background-color: lightblue;
 	padding:50px;
 	border: 15px solid blue;
 	margin: 20px;
